--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://burunyuu23.github.io/tourism/",
+  "homepage": "./",
   "name": "tourism",
   "private": true,
   "version": "1.0.0",
@@ -20,6 +20,7 @@
     "@rsbuild/core": "^0.3.4",
     "@rsbuild/plugin-react": "^0.3.4",
     "@rsbuild/plugin-svgr": "^0.3.4",
+    "@types/node": "^20.11.5",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "postcss-normalize": "^10.0.1",
