--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tourism",
-  "homepage": "/tourism",
+  "homepage": "https://burunyuu23.github.io/",
   "private": true,
   "version": "1.0.0",
   "scripts": {
